# onair-wyrmgrid

./: .env.example  .gitattributes  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  deny.toml  package-lock.json  package.json  rustfmt.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/extension-developer-kit/: BUNDLED-README.txt
apps/desktop/src-tauri/src/: credential_store.rs  database_key.rs  developer_resources.rs  diagnostic_reporting.rs  diagnostics.rs  lib.rs  main.rs  observability.rs
apps/desktop/src-tauri/src/tests/: credential_store.rs  database_key.rs  developer_resources.rs  diagnostics.rs  observability.rs  simulator_provider.rs  startup_options.rs
codecs/opus/: Cargo.toml  codec.json
codecs/opus/src/: main.rs
codecs/opus/tests/: provider.rs
crates/application/: Cargo.toml
crates/application/src/: atlas_preferences.rs  audio_codec.rs  audio_codec_packages.rs  audio_media.rs  audio_provider.rs  audio_provider_packages.rs  audio_recording.rs  authorization.rs  credentials.rs  data_protection.rs  dispatch.rs  display.rs  extension_packages.rs  flight_operation.rs  flight_plan_map.rs  flight_weather_map.rs  lib.rs  localization.rs  plugins.rs  route_weather.rs  simulator.rs  simulator_debrief.rs  simulator_recording.rs
crates/application/src/tests/: application.rs  atlas_preferences.rs  audio_codec.rs  audio_media.rs  audio_provider.rs  audio_recording.rs  authorization.rs  credentials.rs  data_protection.rs  dispatch.rs  display.rs  extension_packages.rs  flight_operation.rs  flight_plan_map.rs  flight_weather_map.rs  localization.rs  plugins.rs  route_weather.rs  simulator.rs  simulator_debrief.rs  simulator_recording.rs
crates/domain/: Cargo.toml
crates/domain/src/: audio.rs  flight_operation.rs  flight_plan.rs  job.rs  lib.rs  operational.rs  simulator.rs  staff.rs  weather.rs
crates/domain/src/tests/: audio.rs  domain.rs  flight_operation.rs  flight_plan.rs  job.rs  simulator.rs  staff.rs  weather.rs
crates/onair-api/: Cargo.toml
crates/onair-api/src/: lib.rs
crates/onair-api/src/tests/: unit.rs
crates/onair-api/tests/fixtures/: swagger-company-response.json  swagger-fbo-response.json  swagger-fleet-response.json  swagger-pending-jobs-response.json  swagger-staff-response.json
crates/storage/: Cargo.toml
crates/storage/migrations/: 0001_initial.sql  0002_legal_preferences.sql  0003_themes.sql  0004_plugin_permissions.sql  0005_language_packs.sql  0006_display_preferences.sql  0007_simulator_preferences.sql  0008_simulator_recordings.sql  0009_authorization.sql  0010_simulator_evidence.sql  0011_provider_accounts.sql  0012_interaction_preferences.sql  0013_flight_operations.sql  0014_atlas_rendering_preferences.sql  0015_atlas_weather_graphics_preferences.sql  0016_plugin_preferences.sql  0017_atlas_and_plugin_configuration.sql  0018_audio_recordings.sql  0019_flight_operation_aircraft_assignments.sql  0020_audio_codec_providers.sql  0020_extension_packages.sql  0021_extension_packages.sql  0022_audio_codec_packages.sql
crates/storage/src/: audio_recording.rs  data_protection.rs  lib.rs
crates/storage/src/tests/: data_protection.rs  unit.rs
crates/weather-api/: Cargo.toml
crates/weather-api/src/: lib.rs
crates/weather-api/src/tests/: unit.rs
crates/weather-api/tests/fixtures/: sanitized-metars.json  sanitized-tafs.json
docs/: README.md  debugging.md  development.md  project-brief.md  release-process.md  roadmap.md  testing.md
locales/: en-AU.json
providers/fake-audio/: Cargo.toml  provider.json
providers/fake-audio/src/: main.rs
providers/fake-audio/tests/: application_orchestration.rs  provider.rs
providers/msfs2024-simconnect/: Cargo.toml  provider.json
providers/msfs2024-simconnect/src/: main.rs  simconnect.rs
providers/msfs2024-simconnect/src/tests/: simconnect.rs
providers/msfs2024-simconnect/tests/: protocol.rs
providers/windows-audio/: Cargo.toml  provider.json
providers/windows-audio/src/: main.rs
providers/windows-audio/src/windows/tests/: unit.rs
schemas/: audio-codec-envelope-v1.schema.json  audio-codec-manifest-v1.schema.json  audio-codec-package-manifest-v1.schema.json  audio-provider-envelope-v1.schema.json  audio-provider-envelope-v2.schema.json  audio-provider-manifest-v1.schema.json  audio-provider-manifest-v2.schema.json  audio-provider-package-manifest-v1.schema.json  audio-source-capability-v1.schema.json  bridge-protocol-envelope-v1.schema.json  chart-spec.schema.json  extension-compatibility-report-v1.schema.json  extension-package-manifest-v1.schema.json  flight-plan-snapshot-v1.schema.json  global-weather-layer-v1.schema.json  job-snapshot-v1.schema.json  language-pack-v1.schema.json  local-review-evidence-v1.schema.json  optional-ai-generated-contribution-v1.schema.json  optional-ai-github-app-config-v1.schema.json  optional-ai-task-metrics-v1.schema.json  optional-ai-task-profile-v1.schema.json  plugin-manifest.schema.json  plugin-protocol-envelope.schema.json  simulator-provider-manifest-v1.schema.json  simulator-provider-package-manifest-v1.schema.json  simulator-telemetry-snapshot-v1.schema.json  theme-manifest.schema.json  weather-snapshot-v1.schema.json
scripts/: audit-desktop-commands.mjs  audit-desktop-commands.test.mjs  audit-localization.mjs  audit-localization.test.mjs  cargo-target-directory.mjs  cargo-target-directory.test.mjs  dev-windows.ps1  dev-windows.test.mjs  local-review.mjs  local-review.test.mjs  optional-ai-contribution.mjs  optional-ai-contribution.test.mjs  optional-ai-landing.mjs  optional-ai-landing.test.mjs  package-audio-codec.mjs  package-audio-provider.mjs  package-plugin.mjs  package-plugin.test.mjs  package-simulator-provider.mjs  prepare-atlas-regions.mjs  prepare-atlas-regions.test.mjs  prepare-audio-codec.mjs  prepare-audio-provider.mjs  (+20 more)
(+409 files in other folders)
