[workspace]
members = [
    "apps/desktop/src-tauri",
    "crates/application",
    "crates/domain",
    "crates/onair-api",
    "crates/plugin-protocol",
    "crates/simbrief-api",
    "crates/storage",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.97"
authors = ["Phobos A. D'thorga"]
license = "MIT"
repository = "https://github.com/phobos-dthorga/onair-wyrmgrid"

[workspace.dependencies]
chrono = { version = "0.4.41", default-features = false, features = ["clock", "serde"] }
reqwest = { version = "0.12.22", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
secrecy = "0.10.3"
sentry = { version = "0.48.4", default-features = false, features = ["backtrace", "contexts", "debug-images", "panic", "reqwest", "rustls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
url = "2.5.4"
uuid = { version = "1.17.0", features = ["serde", "v4"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
