[workspace]
members = [
    "apps/desktop/src-tauri",
    "crates/application",
    "crates/audio-provider-protocol",
    "crates/bridge-protocol",
    "crates/domain",
    "crates/onair-api",
    "crates/plugin-protocol",
    "crates/simbrief-api",
    "crates/storage",
    "providers/fake-audio",
    "providers/msfs2024-simconnect",
]
resolver = "2"

[workspace.package]
version = "0.3.1"
edition = "2024"
rust-version = "1.97"
authors = ["Phobos A. D'thorga"]
license = "MIT"
repository = "https://github.com/phobos-dthorga/onair-wyrmgrid"

[workspace.dependencies]
base64 = "0.22.1"
chacha20poly1305 = "0.11.0"
chrono = { version = "0.4.41", default-features = false, features = ["clock", "serde"] }
fluent-syntax = "0.12.0"
getrandom = "0.4.3"
hkdf = "0.13.0"
keyring = "4.1.5"
libloading = "0.9.0"
reqwest = { version = "0.12.22", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.40.1", features = ["bundled-sqlcipher-vendored-openssl"] }
secrecy = "0.10.3"
sentry = { version = "0.48.5", default-features = false, features = ["backtrace", "contexts", "debug-images", "panic", "reqwest", "rustls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sha2 = "0.11.0"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
url = "2.5.4"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
