[package]
name = "wyrmgrid-application"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chacha20poly1305.workspace = true
chrono.workspace = true
fluent-syntax.workspace = true
getrandom.workspace = true
hkdf.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
zeroize.workspace = true
zip.workspace = true
wyrmgrid-domain = { path = "../domain" }
wyrmgrid-audio-provider-protocol = { path = "../audio-provider-protocol" }
wyrmgrid-bridge-protocol = { path = "../bridge-protocol" }
wyrmgrid-onair-api = { path = "../onair-api" }
wyrmgrid-plugin-protocol = { path = "../plugin-protocol" }
wyrmgrid-simbrief-api = { path = "../simbrief-api" }
wyrmgrid-storage = { path = "../storage" }

[dev-dependencies]
tempfile = "3.20.0"
