[package]
name = "wyrmgrid-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rusqlite.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3.20.0"

