[package]
name = "wyrmgrid-weather-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono.workspace = true
reqwest.workspace = true
serde_json.workspace = true
thiserror.workspace = true
url.workspace = true
uuid.workspace = true
wyrmgrid-domain = { path = "../domain" }

[dev-dependencies]
tokio.workspace = true
