[package]
name = "wyrmgrid-fake-audio-provider"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
wyrmgrid-audio-provider-protocol = { path = "../../crates/audio-provider-protocol" }
wyrmgrid-domain = { path = "../../crates/domain" }
