[package]
name = "wyrmgrid-fake-audio-provider"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
wyrmgrid-audio-provider-protocol = { path = "../../crates/audio-provider-protocol" }
wyrmgrid-domain = { path = "../../crates/domain" }

[dev-dependencies]
tempfile = "3.20.0"
wyrmgrid-application = { path = "../../crates/application" }
wyrmgrid-storage = { path = "../../crates/storage" }
