[package]
name = "wyrmgrid-simconnect-provider"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono.workspace = true
libloading.workspace = true
thiserror.workspace = true
wyrmgrid-bridge-protocol = { path = "../../crates/bridge-protocol" }
wyrmgrid-domain = { path = "../../crates/domain" }

[dev-dependencies]
serde_json.workspace = true
