[package]
name = "wyrmgrid-desktop"
version.workspace = true
description = "OnAir WyrmGrid desktop application"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "wyrmgrid_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
sentry.workspace = true
serde.workspace = true
wyrmgrid-application = { path = "../../../crates/application" }
wyrmgrid-domain = { path = "../../../crates/domain" }
wyrmgrid-storage = { path = "../../../crates/storage" }
