[package]
name = "wyrmgrid-desktop"
version.workspace = true
description = "OnAir WyrmGrid desktop application"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "wyrmgrid_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono.workspace = true
getrandom.workspace = true
keyring.workspace = true
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2.7.1"
sentry.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
wyrmgrid-application = { path = "../../../crates/application" }
wyrmgrid-domain = { path = "../../../crates/domain" }
wyrmgrid-storage = { path = "../../../crates/storage" }
zeroize.workspace = true

[dev-dependencies]
uuid.workspace = true
